--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -188,6 +188,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
