--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,7 +18,7 @@ const {
 <meta name="description" content={description}>
 
 <!-- Stylesheets -->
-<link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="/styles/global.css">
 
 <!-- Font Awesome for icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
