--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+  <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  <link rel="stylesheet" href="/src/styles/global.css">
+</head>
+
 <body>
     <!-- Header -->
     <header>
