--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,6 +12,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <BaseHead />
 </head>
 
+<header>
+    <header />
+</header>
+
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
@@ -98,4 +102,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
     <script is:inline src="/script.js"></script>
 </body>
+
+<footer>
+ <footer />
+</footer>
 </html>
+
