--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,9 +12,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <BaseHead />
 </head>
 
-<header>
-    <header />
-</header>
+<head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+</head>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -103,8 +103,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <script is:inline src="/script.js"></script>
 </body>
 
-<footer>
- <footer />
-</footer>
+<Footer />
+
 </html>
 
