--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,9 +12,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <BaseHead />
 </head>
 
-<head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-</head>
+<Header />
 
     <!-- Hero Section -->
     <section class="hero">
