--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,8 +9,8 @@ import { SITE_TITLE } from '../consts';
             <button class="nav-toggle"><i class="fas fa-bars"></i></button>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="index.astro">Home</a></li>
+                    <li><a href="about.astro">About</a></li>
                     <li><a href="powerlifting.html">Powerlifting</a></li>
                     <li><a href="become-a-member.html">Membership</a></li>
                     <li><a href="membership-discounts.html">Discounts</a></li>
