--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,8 +119,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     </main>
 
     <!-- Footer -->
-         <footer />
+<Footer />
 
-    <script is:inline src="/script.js"></script>
+<script is:inline src="/script.js"></script>
 </body>
 </html>
