--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,13 +9,13 @@ import { SITE_TITLE } from '../consts';
             <button class="nav-toggle"><i class="fas fa-bars"></i></button>
             <nav>
                 <ul>
-                    <li><a href="index.astro">Home</a></li>
-                    <li><a href="about.astro">About</a></li>
-                    <li><a href="powerlifting.html">Powerlifting</a></li>
-                    <li><a href="become-a-member.html">Membership</a></li>
-                    <li><a href="membership-discounts.html">Discounts</a></li>
-                    <li><a href="webshop.html">Webshop</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="powerlifting">Powerlifting</a></li>
+                    <li><a href="become-a-member">Membership</a></li>
+                    <li><a href="membership-discounts">Discounts</a></li>
+                    <li><a href="webshop">Webshop</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
