--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,28 +17,28 @@
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul class="footer-links">
-                    <li><a href="index">Home</a></li>
-                    <li><a href="about">About Us</a></li>
-                    <li><a href="powerlifting">Powerlifting</a></li>
-                    <li><a href="become-a-member">Membership</a></li>
-                    <li><a href="history">Our History</a></li>
+                    <li><a href="/index">Home</a></li>
+                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/powerlifting">Powerlifting</a></li>
+                    <li><a href="/become-a-member">Membership</a></li>
+                    <li><a href="/history">Our History</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Member Benefits</h3>
                 <ul class="footer-links">
-                    <li><a href="membership-discounts">Membership Discounts</a></li>
-                    <li><a href="membership-discounts/bossers-vlees">Bossers Vlees</a></li>
-                    <li><a href="membership-discounts/fysiofitaal">Fysio Fitaal</a></li>
-                    <li><a href="webshop.html">Webshop</a></li>
+                    <li><a href="/membership-discounts">Membership Discounts</a></li>
+                    <li><a href="/membership-discounts/bossers-vlees">Bossers Vlees</a></li>
+                    <li><a href="/membership-discounts/fysiofitaal">Fysio Fitaal</a></li>
+                    <li><a href="/webshop.html">Webshop</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Contact Us</h3>
                 <ul class="footer-links">
-                    <li><a href="membership-discounts">Membership Discounts</a></li>
-                    <li><a href="membership-discounts/bossers-vlees" target="_blank">KNKF registration</a></li>
-                    <li><a href="webshop">Webshop</a></li>
+                    <li><a href="/membership-discounts">Membership Discounts</a></li>
+                    <li><a href="/membership-discounts/bossers-vlees" target="_blank">KNKF registration</a></li>
+                    <li><a href="/webshop">Webshop</a></li>
                 </ul>
             </div>
         </div>
