--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -54,42 +54,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 </div>
             </section>
 
-            <!-- Contact Form -->
-            <section class="section">
-                <h2 class="section-title">SEND US A MESSAGE</h2>
-                <p class="mb-40">Fill out the form below and we'll get back to you as soon as possible.</p>
-                
-                <form id="contactForm" class="contact-form" action="#" method="post">
-                    <div class="form-group">
-                        <label for="name">Name *</label>
-                        <input type="text" id="name" name="name" class="form-control" required>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="email">Email *</label>
-                        <input type="email" id="email" name="email" class="form-control" required>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="subject">Subject *</label>
-                        <select id="subject" name="subject" class="form-control" required>
-                            <option value="">Select a subject</option>
-                            <option value="general">General Inquiry</option>
-                            <option value="membership">Membership Information</option>
-                            <option value="powerlifting">Powerlifting Questions</option>
-                            <option value="competitions">Competition Information</option>
-                            <option value="other">Other</option>
-                        </select>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="message">Message *</label>
-                        <textarea id="message" name="message" class="form-control" required></textarea>
-                    </div>
-                    
-                    <button type="submit" class="btn">SEND MESSAGE</button>
-                </form>
-            </section>
+            <ContactForm />
             
             <!-- FAQ -->
             <section class="section">
