--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -105,6 +105,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <!-- Footer -->
     </footer>
 
-    <script src="script.js"></script>
+<script is:inline src="/script.js"></script>
 </body>
 </html>
