--- a/src/pages/membership-discounts.astro
+++ b/src/pages/membership-discounts.astro
@@ -125,7 +125,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             <section class="section text-center">
                 <h2 class="section-title centered-title">BECOME A MEMBER</h2>
                 <p class="mb-40">Join Spartacus today to access these exclusive discounts and many more benefits!</p>
-                <a href="become-a-member.html" class="btn">JOIN NOW</a>
+                <a href="become-a-member" class="btn">JOIN NOW</a>
             </section>
         </div>
     </main>
