--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -93,7 +93,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             <section class="section text-center">
                 <h2 class="section-title centered-title">Our History</h2>
                 <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
-                <a href="history.html" class="btn">Explore Our History</a>
+                <a href="/history" class="btn">Explore Our History</a>
             </section>
         </div>
     </main>
