--- a/src/pages/become-a-member.astro
+++ b/src/pages/become-a-member.astro
@@ -110,7 +110,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 <h2 class="section-title centered-title">READY TO JOIN?</h2>
                 <p class="mb-40">Visit the Tilburg University Sports Center today to register with T.S.K.V. Spartacus.</p>
                 <div>
-                    <a href="contact.html" class="btn">CONTACT US WITH QUESTIONS</a>
+                    <a href="contact" class="btn">CONTACT US WITH QUESTIONS</a>
                 </div>
             </section>
         </div>
