--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import { SITE_TITLE } from '../consts';
                 <ul>
                     <li><a href="/index">Home</a></li>
                     <li><a href="/about">About</a></li>
-                    <li><a href="/powerlifting">Powerlifting</a></li>
+                    <li><a href="/strenghtsports">strenghtsports</a></li>
                     <li><a href="/become-a-member">Membership</a></li>
                     <li><a href="/membership-discounts">Discounts</a></li>
                     <li><a href="/webshop">Webshop</a></li>
