--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -97,7 +97,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             <section class="section text-center">
                 <h2 class="section-title centered-title">Be Part of Our Future</h2>
                 <p class="mb-40">Join T.S.K.V. Spartacus today and become part of our continuing history. Your journey with us starts now!</p>
-                <a href="become-a-member.html" class="btn">Become a Member</a>
+                <a href="/become-a-member" class="btn">Become a Member</a>
             </section>
         </div>
     </main>
