--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@
                 <ul class="footer-links">
                     <li><a href="/index">Home</a></li>
                     <li><a href="/about">About Us</a></li>
-                    <li><a href="/strenghtsports">strenghtsports</a></li>
+                    <li><a href="/strenghtsports">Strenghtsports</a></li>
                     <li><a href="/become-a-member">Membership</a></li>
                     <li><a href="/history">Our History</a></li>
                 </ul>
