--- a/src/pages/strenghtsports.astro
+++ b/src/pages/strenghtsports.astro
@@ -11,6 +11,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 <head>
     <BaseHead />
 </head>
+<body>
+    <Header />
 
     <!-- Main Content -->
     <main>
