--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -83,8 +83,7 @@
         width: 100%;
         max-width: 600px;
         margin: 0 auto;
-        align-items: left;
-    }
+}
 
     .form-group {
         margin-bottom: 20px;
@@ -115,4 +114,8 @@
         text-align: center;
         font-weight: bold;
     }
+
+.section-title, .mb-40 {
+    text-align: left;
+}
 </style>
